<resources>
    <string name="app_name">Body X Calculator</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculate">Calculate</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hint_weight">Weight (kg)</string>
    <string name="hint_age">Age</string>
    <string name="hint_chest">Chest (mm)</string>
    <string name="hint_abdomen">Abdomen (mm)</string>
    <string name="hint_thigh">Thigh (mm)</string>
    <string name="body_fat_label">You body fat percentage is:</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
</resources>
