<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">

            <LinearLayout
                android:id="@+id/ll_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_basic">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_chest"
                        android:inputType="numberDecimal"
                        android:text="@={viewmodel.chestMeasure}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_abdomen"
                        android:inputType="numberDecimal"
                        android:text="@={viewmodel.abdomenMeasure}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_thigh"
                        android:inputType="numberDecimal"
                        android:text="@={viewmodel.thighMeasure}" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="@{viewmodel.resultAvailable ? View.VISIBLE:View.GONE}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_info">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/body_fat_label"
                    android:textSize="@dimen/text_small" />

                <TextView
                    android:id="@+id/tv_result"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:paddingStart="@dimen/padding_8"
                    android:text="@{viewmodel.fatPerc}"
                    android:textColor="@color/nude_shade"
                    android:textSize="@dimen/text_large"
                    android:textStyle="bold"
                    tools:text="89%" />
            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_basic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_age"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/et_weight"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_age"
                        android:inputType="number"
                        android:text="@={viewmodel.age}" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_weight"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    app:layout_constraintLeft_toRightOf="@id/et_age"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_weight"
                        android:inputType="numberDecimal"
                        android:text="@={viewmodel.weight}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
                    android:id="@+id/group_choices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:bindToggleListener="@{viewmodel.onGenderChanged}"
                    app:layout_constraintTop_toBottomOf="@id/et_weight"
                    app:tbgCheckedButton="@id/choice_male"
                    app:tbgFlow="true">

                    <RadioButton
                        android:id="@+id/choice_male"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/gender_selector_button_height"
                        android:background="@drawable/selector_bg_radio_button"
                        android:button="@null"
                        android:gravity="center"
                        android:paddingLeft="@dimen/margin_16"
                        android:paddingTop="@dimen/margin_8"
                        android:paddingRight="@dimen/margin_16"
                        android:paddingBottom="@dimen/margin_8"
                        android:text="@string/text_male"
                        android:textColor="@color/selector_text_radio_button" />

                    <RadioButton
                        android:id="@+id/choice_female"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/gender_selector_button_height"
                        android:layout_marginStart="@dimen/margin_16"
                        android:background="@drawable/selector_bg_radio_button"
                        android:button="@null"
                        android:gravity="center"
                        android:paddingLeft="@dimen/margin_16"
                        android:paddingTop="@dimen/margin_8"
                        android:paddingRight="@dimen/margin_16"
                        android:paddingBottom="@dimen/margin_8"
                        android:text="@string/text_female"
                        android:textColor="@color/selector_text_radio_button" />


                </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <data>

        <import type="android.view.View" />

        <import type="androidx.core.content.ContextCompat" />

        <variable
            name="viewmodel"
            type="com.ayusch.bodyfatcalculator.calculations.CalculationViewModel" />

    </data>
</layout>